sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:17: error: not found: value lgr
  for (i<-1 to lgr-1) {
               ^AlgShellSort:18: error: not found: value v
    v = getValeur(i)
    ^AlgShellSort:19: error: not found: value temp
    temp = 0
    ^AlgShellSort:22: error: not found: value temp
      temp+=ecart
      ^AlgShellSort:24: error: not found: value v
    setValeur(i-temp,v)
                     ^